third_party/WebKit/Source/core/geometry/DOMPointReadOnly.cpp
@@ -42,7 +42,7 @@ DOMPoint* DOMPointReadOnly::matrixTransform(DOMMatrixInit& other,
 
   if (matrix->is2D() && z() == 0 && w() == 1) {
     double transformed_x =
-        x() * matrix->m11() + y() * matrix->m12() + matrix->m41();
+        x() * matrix->m11() + y() * matrix->m21() + matrix->m41();
     double transformed_y =
         x() * matrix->m12() + y() * matrix->m22() + matrix->m42();
     return DOMPoint::Create(transformed_x, transformed_y, 0, 1);
